--- a/exercises/genericList/Makefile
+++ b/exercises/genericList/Makefile
@@ -2,7 +2,7 @@ Out.txt: main.exe
 	cat input.txt |mono $< 1> $@ 2> log
 main.exe: main.cs genlist.dll
 	mcs $< -target:exe -out:$@\
-		$(addprefix -reference:,$(filter %.dll,$^))
+		$(addprefix -reference:$(filter %.dll,$^))
 		$(filter %.cs,$^)
 genlist.dll: genlist.cs
 	mcs $< -target:library -out:$@
