--- a/exercises/multiprocessing/Makefile
+++ b/exercises/multiprocessing/Makefile
@@ -1,17 +1,16 @@
 TIME = time --portability --append --output $@
 
 N = 1e8
-Out.txt: main.exe
+Out.txt: main.exe parallel.exe
 	>$@
 	$(TIME)  mono $< -terms:$N -threads:1 >> $@
 	$(TIME)  mono $< -terms:$N -threads:2 >> $@
 	$(TIME)  mono $< -terms:$N -threads:3 >> $@
 	$(TIME)  mono $< -terms:$N -threads:4 >> $@
+	$(TIME)  mono parallel.exe -terms:$N >>  $@
 main.exe: main.cs
 	mcs $<
-
-test: out1 out2 out3 out4
-out1:main.exe; 	$(TIME)  mono $< -terms:$N -threads:4 >> $@
-out2:main.exe; 	$(TIME)  mono $< -terms:$N -threads:4 >> $@
-out3:main.exe; 	$(TIME)  mono $< -terms:$N -threads:4 >> $@
-out4:main.exe; 	$(TIME)  mono $< -terms:$N -threads:4 >> $@
+parallel.exe: parallel.cs
+	mcs $<
+clean:
+	rm -f Out.txt  main.exe
