"Splines done except an exceotion in intializing class'"

--- a/homeworks/Splines/Makefile
+++ b/homeworks/Splines/Makefile
@@ -1,16 +1,29 @@
-DIR = ../../matlib/matrix
-DLLS = $(addprefic -reference:,$(filter %.dll,$^))
+DIR = ../../matlib
+DLLS = $(addprefix -reference:,$(filter %.dll,$^))
+OUTPUTS=$(addprefix -output:,$(filter %.data,$^))
 MKLIBF = mcs $^ -target:library -out:./$@
-MKLIB = mcs $^ -target:library -out:$@
+MKLIB = mcs $< -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
+MKDATA = mono $< > $@
 
-Out.txt: main.exe
-	mono $< -input:Input.txt > $@
-main.exe: main.cs Spline.dll
+Task: Out.txt SplineTest.svg
+
+Out.txt: main.exe Data.data LineterpIntegTests.data LineterpTests.data
+	mono $< -input:Input.txt $(OUTPUTS) > $@
+main.exe: main.cs Spline.dll qSpline.dll matlib.dll
 	$(MKEXE) $(DLLS)
+matlib.dll: $(DIR)/IOputs.cs $(DIR)/matrix/vector.cs
+	$(MKLIBF)
 Spline.dll: Spline.cs
 	$(MKLIB)
+qSpline.dll:qSpline.cs Spline.dll matlib.dll
+	$(MKLIB) $(DLLS)
 
+SplineTest.svg: SplineTest.gpi Data.data LineterpIntegTests.data LineterpTests.data
+	gnuplot $< > $@
+Data.data:
+LineterpIntegTests.data:
+LineterpTests.data:
 
 clean:
-	rm -f Out.txt *.exe *.dll
+	rm -f Out.txt *.exe *.dll *.data *.svg
