--- a/homeworks/Splines/Makefile
+++ b/homeworks/Splines/Makefile
@@ -5,10 +5,12 @@ MKLIBF = mcs $^ -target:library -out:./$@
 MKLIB = mcs $< -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
 MKDATA = mono $< > $@
+DATA = Data.data LineterpIntegTests.data LineterpTests.data qSpline1.data qSpline2.data
+DATA2 = qSpline3.data qData.data
 
-Task: Out.txt SplineTest.svg
+Task: Out.txt SplineTest.svg qSpline.svg
 
-Out.txt: main.exe Data.data LineterpIntegTests.data LineterpTests.data
+Out.txt: main.exe $(DATA) $(DATA2)
 	mono $< -input:Input.txt $(OUTPUTS) > $@
 main.exe: main.cs Spline.dll qSpline.dll matlib.dll
 	$(MKEXE) $(DLLS)
@@ -24,6 +26,13 @@ SplineTest.svg: SplineTest.gpi Data.data LineterpIntegTests.data LineterpTests.d
 Data.data:
 LineterpIntegTests.data:
 LineterpTests.data:
+
+qSpline.svg:qSpline.gpi qSpline1.data qSpline2.data qSpline3.data
+	gnuplot $< > $@
+qSpline1.data:
+qSpline2.data:
+qSpline3.data:
+qData.data:
 
 clean:
 	rm -f Out.txt *.exe *.dll *.data *.svg
