"SPline nearly done"

--- a/homeworks/Splines/Makefile
+++ b/homeworks/Splines/Makefile
@@ -5,17 +5,22 @@ MKLIBF = mcs $^ -target:library -out:./$@
 MKLIB = mcs $< -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
 MKDATA = mono $< > $@
-DATA = Data.data LineterpIntegTests.data LineterpTests.data qSpline1.data qSpline2.data
-DATA2 = qSpline3.data qData.data
+DATA = Data.data LineterpIntegTests.data LineterpTests.data
+OUTPUTS=$(addprefix -output:,$(filter %.data,$(DATA)))
+DATA2 = qSpline1.data qSpline2.data qSpline3.data qSpline4.data qSpline4D.data qSpline4I.data qData.data
+OUTPUTS2=$(addprefix -output:,$(filter %.data,$(DATA2)))
 
 Task: Out.txt SplineTest.svg qSpline.svg
 
-Out.txt: main.exe $(DATA) $(DATA2)
-	mono $< -input:Input.txt $(OUTPUTS) > $@
+Out.txt: main.exe Input.txt
+	mono $< -input:Input.txt $(OUTPUTS) $(OUTPUTS2)> $@
+
 main.exe: main.cs Spline.dll qSpline.dll matlib.dll
 	$(MKEXE) $(DLLS)
+
 matlib.dll: $(DIR)/IOputs.cs $(DIR)/matrix/vector.cs $(DIR)/matrix/matrix.cs $(DIR)/genlist.cs
 	$(MKLIBF)
+
 Spline.dll: Spline.cs
 	$(MKLIB)
 qSpline.dll:qSpline.cs Spline.dll matlib.dll
@@ -23,16 +28,12 @@ qSpline.dll:qSpline.cs Spline.dll matlib.dll
 
 SplineTest.svg: SplineTest.gpi Data.data LineterpIntegTests.data LineterpTests.data
 	gnuplot $< > $@
-Data.data:
-LineterpIntegTests.data:
-LineterpTests.data:
+
 
 qSpline.svg:qSpline.gpi qSpline1.data qSpline2.data qSpline3.data
 	gnuplot $< > $@
-qSpline1.data:
-qSpline2.data:
-qSpline3.data:
-qData.data:
+
+$(DATA) $(DATA2): main.exe
 
 clean:
 	rm -f Out.txt *.exe *.dll *.data *.svg
