--- a/homeworks/ODE/Makefile
+++ b/homeworks/ODE/Makefile
@@ -1,14 +1,16 @@
 DIR = ../../matlib
 DLLS = $(addprefix -reference:,$(filter %.dll,$^))
-OUTPUTS = $(addprefix -output:,$(filter %.data,$^))
+Data = Oscilation.data scipyPlot.data scipyPlot2.data
+OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data)))
 MKLIBF = mcs $(filter %.cs,$^) -target:library -out:./$@
 MKLIB = mcs $(filter %.cs,$^) -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
 
-Task:Oscilation.svg Out.txt
+Task:Out.txt Oscilation.svg scipyPlot.svg scipyPlot2.svg
 
-Out.txt: main.exe Oscilation.data
+Out.txt: main.exe
 	mono $< $(OUTPUTS) > $@
+$(Data): main.exe
 main.exe: main.cs ODE.dll matlib.dll IOput.dll
 	$(MKEXE) $(DLLS)
 matlib.dll: $(DIR)/matrix/matrix.cs $(DIR)/matrix/vector.cs $(DIR)/genlist.cs
@@ -21,4 +23,11 @@ ODE.dll: ODE.cs matlib.dll
 
 Oscilation.svg:Oscilation.gpi Oscilation.data
 	gnuplot $< > $@
-Oscilation.data:
+scipyPlot.svg:scipyPlot.gpi scipyPlot.data
+	gnuplot $< > $@
+scipyPlot2.svg:scipyPlot2.gpi scipyPlot2.data
+	gnuplot $< > $@
+
+
+clean:
+	rm -f Out.txt *.svg *.dll *.exe *.data
