--- a/homeworks/MonteCarlo/Makefile
+++ b/homeworks/MonteCarlo/Makefile
@@ -1,10 +1,12 @@
 DIR = ../../matlib
 DLLS = $(addprefix -reference:,$(filter %.dll,$^))
-Data = Oscilation.data scipyPlot.data scipyPlot2.data
+Data = ReelErr.data EstErr.data val.data
 OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data)))
 MKLIBF = mcs $(filter %.cs,$^) -target:library -out:./$@
 MKLIB = mcs $(filter %.cs,$^) -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
+
+Task: Out.txt 2Dplot.svg
 
 Out.txt: main.exe
 	mono $< $(OUTPUTS) > $@
@@ -17,3 +19,6 @@ IOput.dll:$(DIR)/IOputs.cs matlib.dll
 	$(MKLIBF) $(DLLS)
 monteCarlo.dll: monteCarlo.cs matlib.dll
 	$(MKLIB) $(DLLS)
+
+2Dplot.svg: 2Dplot.gpi $(Data)
+	gnuplot $< > $@
