"Neural network nearly done"

--- a/homeworks/Minimisation/Makefile
+++ b/homeworks/Minimisation/Makefile
@@ -5,6 +5,7 @@ OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data)))
 MKLIBF = mcs $(filter %.cs,$^) -target:library -out:./$@
 MKLIB = mcs $(filter %.cs,$^) -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
+USEDLLS = matrix.cs vector.cs
 
 Task: Out.txt partBplot.svg
 
@@ -14,7 +15,7 @@ main.exe: main.cs minimi.dll matlib.dll IOput.dll
 	$(MKEXE) $(DLLS)
 $(Data):main.exe
 
-matlib.dll: $(DIR)/matrix/*.cs $(DIR)/genlist.cs
+matlib.dll: $(DIR)/matrix/matrix.cs $(DIR)/matrix/vector.cs  $(DIR)/genlist.cs
 	$(MKLIBF)
 IOput.dll:$(DIR)/IOputs.cs matlib.dll
 	$(MKLIBF) $(DLLS)
