"ANN in progress"

--- a/homeworks/NeuralNetwork/Makefile
+++ b/homeworks/NeuralNetwork/Makefile
@@ -1,18 +1,19 @@
 DIR = ../../matlib
 DLLS = $(addprefix -reference:,$(filter %.dll,$^))
-Data = valPartA.data ANNresPartA.data ANNresPartA1.data ANNresPartA2.data
-OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data)))
+Data = valPartA.data ANNresPartA.data
+Data2 = ANNresInPartB.data ANNresDePartB.data ANNresDe2PartB.data ValresInPartB.data ValDePartB.data ValDe2PartB.data
+OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data) $(Data2)))
 MKLIBF = mcs $(filter %.cs,$^) -target:library -out:./$@
 MKLIB = mcs $(filter %.cs,$^) -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
 
-Task: Out.txt partAplot.svg
+Task: Out.txt partAplot.svg partBplot.svg
 
 Out.txt: main.exe
 	mono $< $(OUTPUTS) > $@
 main.exe: main.cs ANN.dll matlib.dll IOput.dll
 	$(MKEXE) $(DLLS)
-$(Data):main.exe
+$(Data) $(Data2):main.exe
 
 matlib.dll: $(DIR)/matrix/*.cs $(DIR)/genlist.cs
 	$(MKLIBF)
@@ -22,6 +23,8 @@ ANN.dll: ANN.cs matlib.dll IOput.dll
 	$(MKLIB) $(DLLS)
 
 partAplot.svg: partA.gpi $(Data)
+	gnuplot $< > $@
+partBplot.svg: partB.gpi $(Data2)
 	gnuplot $< > $@
 
 clean:
