"Neural network done"

--- a/homeworks/NeuralNetwork/Makefile
+++ b/homeworks/NeuralNetwork/Makefile
@@ -1,13 +1,13 @@
 DIR = ../../matlib
 DLLS = $(addprefix -reference:,$(filter %.dll,$^))
 Data = valPartA.data ANNresPartA.data
-Data2 = ANNresInPartB.data ANNresDePartB.data ANNresDe2PartB.data ValresInPartB.data ValDePartB.data ValDe2PartB.data
+Data2 = ANNresInPartB.data ANNresDePartB.data ANNresDe2PartB.data ValInPartB.data ValDePartB.data ValDe2PartB.data valPartB.data
 OUTPUTS = $(addprefix -output:,$(filter %.data,$(Data) $(Data2)))
 MKLIBF = mcs $(filter %.cs,$^) -target:library -out:./$@
 MKLIB = mcs $(filter %.cs,$^) -target:library -out:$@
 MKEXE = mcs $< -target:exe -out:$@
 
-Task: Out.txt partAplot.svg partBplot.svg
+Task: Out.txt partAplot.svg partBplot.svg partB1plot.svg partB2plot.svg
 
 Out.txt: main.exe
 	mono $< $(OUTPUTS) > $@
@@ -26,6 +26,9 @@ partAplot.svg: partA.gpi $(Data)
 	gnuplot $< > $@
 partBplot.svg: partB.gpi $(Data2)
 	gnuplot $< > $@
-
+partB1plot.svg: partB1.gpi $(Data2)
+	gnuplot $< > $@
+partB2plot.svg: partB2.gpi $(Data2)
+	gnuplot $< > $@
 clean:
 	rm -f *.svg *.dll *.exe *.data Out.txt
