"LS part c done, cleanned up and every make command is made"

--- a/homeworks/LeastSquare/Makefile
+++ b/homeworks/LeastSquare/Makefile
@@ -4,29 +4,25 @@ MKLIBF = mcs $^ -target:library -out:./$@
 MKLIB = mcs $< -target:library -out:$@
 MKDATA = mono $< > $@
 MKEXE = mcs $< -target:exe -out:$@
+DATA = ExpData.data DataFit.data DataFitU.data DataFitD.data
+OUTPUTS = $(addprefix -output:,$(filter %.data,$(DATA)))
 
 Task: Out.txt LsPlot.svg
 
 Out.txt: main.exe
-	mono $< > $@
+	mono $< $(OUTPUTS) > $@
 main.exe: main.cs matrix.dll LS.dll
 	mcs $< -target:exe -out:$@ $(DLLS)
 
-matrix.dll: $(DIR)/matrix.cs $(DIR)/vector.cs $(DIR)/QRGS.cs
+matrix.dll: $(DIR)/matrix.cs $(DIR)/vector.cs $(DIR)/QRGS.cs $(DIR)/../IOputs.cs $(DIR)/../genlist.cs
 	$(MKLIBF)
 LS.dll: LS.cs matrix.dll
 	$(MKLIB) $(DLLS)
 
 LsPlot.svg: LsPlot.gpi ExpData.data DataFit.data
 	gnuplot $< > $@
-ExpData.data: ExpData.exe
-	$(MKDATA)
-ExpData.exe: ExpData.cs matrix.dll
-	$(MKEXE) $(DLLS)
-DataFit.data: DataFit.exe
-	$(MKDATA)
-DataFit.exe:DataFit.cs
-	$(MKEXE)
+$(DATA):main.cs
+
 
 clean:
-	rm -f *.txt *.exe *.dll *.data *.svg
+	rm -f Out.txt *.exe *.dll *.data *.svg
